--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is namaste React",
-  
   "scripts": {
     "test": "jest",
     "start": "parcel index.html",
@@ -27,7 +26,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1"
   },
   "browserslists": [
     "last 5 version"
